// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/cat-1000.d65e7ea.100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/cat-1000.d65e7ea.100.jpg",
  "srcSet": "foobar/cat-1000.d65e7ea.100.jpg",
  "toString": [Function],
}
`;

exports[`doesn't emit file 1`] = `
Object {
  "height": 225,
  "images": Array [
    Object {
      "height": 225,
      "path": "foobar/cat-1000.cf07671.250.jpg",
      "width": 250,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.cf07671.250.jpg",
  "srcSet": "foobar/cat-1000.cf07671.250.jpg 250w",
  "toString": [Function],
  "width": 250,
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.ad4b6c4.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/cat-1000.9fca340.500.jpg 500w,foobar/cat-1000.ad4b6c4.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/cat-1000.9fca340.500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/img/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/img/cat-1000.e0adf4e.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/img/cat-1000.ad4b6c4.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/img/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/img/cat-1000.9fca340.500.jpg 500w,foobar/img/cat-1000.e0adf4e.750.jpg 750w,foobar/img/cat-1000.ad4b6c4.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/-500x450.jpg",
  "srcSet": "foobar/test/-500x450.jpg 500w,foobar/test/-750x675.jpg 750w,foobar/test/-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/cat-1000.b50e60c.100.jpg",
      "width": 100,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.b50e60c.100.jpg",
  "srcSet": "foobar/cat-1000.b50e60c.100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/cat-1000.b50e60c.100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/cat-1000.4f9c9d6.200.jpg",
      "width": 200,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.b50e60c.100.jpg",
  "srcSet": "foobar/cat-1000.b50e60c.100.jpg 100w,foobar/cat-1000.4f9c9d6.200.jpg 200w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/cat-transparent.d88e8a0.500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/cat-transparent.2f2f013.513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-transparent.d88e8a0.500.png",
  "srcSet": "foobar/cat-transparent.d88e8a0.500.png 500w,foobar/cat-transparent.2f2f013.513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/cat-transparent.19cbc92.500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/cat-transparent.2cd0b48.513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-transparent.19cbc92.500.jpg",
  "srcSet": "foobar/cat-transparent.19cbc92.500.jpg 500w,foobar/cat-transparent.2cd0b48.513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 2`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/cat-transparent.19cbc92.500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/cat-transparent.2cd0b48.513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-transparent.19cbc92.500.jpg",
  "srcSet": "foobar/cat-transparent.19cbc92.500.jpg 500w,foobar/cat-transparent.2cd0b48.513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "public/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "public/cat-1000.e0adf4e.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "public/cat-1000.ad4b6c4.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "public/cat-1000.9fca340.500.jpg",
  "srcSet": "public/cat-1000.9fca340.500.jpg 500w,public/cat-1000.e0adf4e.750.jpg 750w,public/cat-1000.ad4b6c4.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/cat-1000.9fca340.500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 540,
  "images": Array [
    Object {
      "height": 540,
      "path": "foobar/cat-1000.f0784d9.600.jpg",
      "width": 600,
    },
    Object {
      "height": 630,
      "path": "foobar/cat-1000.2c580c0.700.jpg",
      "width": 700,
    },
    Object {
      "height": 720,
      "path": "foobar/cat-1000.bbb4217.800.jpg",
      "width": 800,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.f0784d9.600.jpg",
  "srcSet": "foobar/cat-1000.f0784d9.600.jpg 600w,foobar/cat-1000.2c580c0.700.jpg 700w,foobar/cat-1000.bbb4217.800.jpg 800w",
  "toString": [Function],
  "width": 600,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/cat-1000.b50e60c.100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/cat-1000.cdade20.167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/cat-1000.d28adc0.234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/cat-1000.d2285e5.300.jpg",
      "width": 300,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.b50e60c.100.jpg",
  "srcSet": "foobar/cat-1000.b50e60c.100.jpg 100w,foobar/cat-1000.cdade20.167.jpg 167w,foobar/cat-1000.d28adc0.234.jpg 234w,foobar/cat-1000.d2285e5.300.jpg 300w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
    Object {
      "height": 600,
      "path": "foobar/cat-1000.13f4f08.667.jpg",
      "width": 667,
    },
    Object {
      "height": 751,
      "path": "foobar/cat-1000.394eeb3.834.jpg",
      "width": 834,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.ad4b6c4.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/cat-1000.9fca340.500.jpg 500w,foobar/cat-1000.13f4f08.667.jpg 667w,foobar/cat-1000.394eeb3.834.jpg 834w,foobar/cat-1000.ad4b6c4.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/cat-1000.e0adf4e.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.ad4b6c4.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": Any<String>,
  "src": "foobar/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/cat-1000.9fca340.500.jpg 500w,foobar/cat-1000.e0adf4e.750.jpg 750w,foobar/cat-1000.ad4b6c4.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.9fca340.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/cat-1000.e0adf4e.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.ad4b6c4.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.9fca340.500.jpg",
  "srcSet": "foobar/cat-1000.9fca340.500.jpg 500w,foobar/cat-1000.e0adf4e.750.jpg 750w,foobar/cat-1000.ad4b6c4.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
